Ensure fields are properly mapped for IndexVolume